Plot collatz paths and lengths.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <link href="default.css" rel="stylesheet" title="Default Style">
     <script src="jeff.js"></script>
 </head>
-<body onload="Jeff.draw()">
-    <canvas id="tutorial" width="150" height="150">
+<body onload="Jeff.main()">
+    <canvas id="lengths">
+    </canvas>
+    <h1 id="title"></h1>
+    <canvas id="collatz">
         This page requires &lt;canvas&gt; element support.
     </canvas>
 </body>
