Add Pause/Resume.  Show maxY as intensity.

--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
     <canvas id="collatz">
         This page requires &lt;canvas&gt; element support.
     </canvas>
+
+    <button onclick="jeff.pause()">Pause</button>
+    <button onclick="jeff.resume()">Resume</button>
+    <button onclick="window.location.reload(true)">Reload</button>
 </body>
 </html>
